# tern

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICES  Package.swift  README.md  STABILITY.md  agents-guide.md  bench_test.go  bullseye.yaml  channel.go  channel_test.go  chaos_test.go  conn.go  conn_test.go  e2e_test.go  executor.go  executor_test.go  fault_test.go  fly.toml  fragment.go  fragment_test.go  go.mod  go.sum  lan.go  lan_test.go  main.go  main_test.go  pairingceremony_gen.go  path.go  pathswitch_test.go  pigeon.go  quicserver.go  session.go  session_gen.go  stress_test.go  tern.go  (+2 more)
android/: build.gradle.kts  settings.gradle.kts
c/: CMakeLists.txt  amalgamate.sh
c/include/pigeon/: pairingceremony_gen.h  pigeon.h
c/src/: crypto.c  pairingceremony_gen.c  pigeon.c
c/test/: test_pigeon.c
crypto/: crypto.go  crypto_test.go
docs/: audit-log.md  convergence-report.md  local-backchannel.md  pairingceremony.puml  relay.puml  session-peers.puml  session-protocol.md  session-statechart.puml  session.puml  targets.md  targets.yaml  transport.puml
faultproxy/: faultproxy.go
formal/: PairingCeremony-invariants.cfg  PairingCeremony.cfg  PairingCeremony.tla  PathSwitch.cfg  PathSwitch.tla  Session.tla  Session_Pairing.tla  Session_Transport.cfg  Session_Transport.old  Session_Transport.tla  tlc
protocol/: cgen.go  export_test.go  gogen.go  kotlin.go  machine.go  pairing.yaml  pairingceremony_gen.go  pathswitch.yaml  pathswitch_gen.go  plantuml.go  protocol.go  protocol_test.go  session.yaml  session_gen.go  swift.go  tla.go  (+3 more)
(+87 files in other folders)
